Kind of fix the left pane collapse
Unfortunately the collapse animation is broken for the inner action
pane. Tried a few things but not sure what's preventing it from
happening.

--- a/src/hazelweb/www/style.css
+++ b/src/hazelweb/www/style.css
@@ -166,6 +166,10 @@ html, body {
   width: 28px;
 }
 
+.collapsed-sidebar #slidable-left-bar-body {
+  width: 0px;
+}
+
 /* Set width to zero to have the sidebar "slide away" */
 #collapsible-left-bar {
   /* Need to reverse the text direction to make the left bar
